getting rid of List.copyOf so that works on Java 8